--- a/website-projects/loopstudios/input.css
+++ b/website-projects/loopstudios/input.css
@@ -15,7 +15,7 @@
 }
 
 .item-container {
-  @apply flex flex-col justify-between w-full space-y-6 text-2xl text-white uppercase md:flex-row md:space-y-0 md:space-x-8;
+  @apply flex flex-col justify-between w-full space-y-6 text-2xl text-white uppercase md:flex-row md:space-y-0 md:space-x-6;
 }
 
 .item {
@@ -27,14 +27,14 @@
 }
 
 #hero {
-  background-image: url('../images/desktop/image-hero.jpg');
+  background-image: url("../images/desktop/image-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 @media (max-width: 576px) {
   #hero {
-    background-image: url('../images/mobile/image-hero.jpg');
+    background-image: url("../images/mobile/image-hero.jpg");
     background-position: center;
   }
 }
