--- a/website-projects/shortly/input.css
+++ b/website-projects/shortly/input.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 #cta {
-  background-image: url('../images/bg-boost-desktop.svg');
+  background-image: url("../images/bg-boost-desktop.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .ficon:hover {
-  filter: invert(79%) sepia(61%) saturate(464%) hue-rotate(130deg)
-    brightness(89%) contrast(85%);
+  filter: invert(53%) sepia(68%) saturate(434%) hue-rotate(121deg)
+    brightness(101%) contrast(94%);
 }
 
 /* HAMBURGER MENU */
@@ -26,13 +26,13 @@
 .hamburger-top,
 .hamburger-middle,
 .hamburger-bottom {
-  content: '';
+  content: "";
   position: absolute;
   width: 24px;
   height: 3px;
   top: 0;
   left: 0;
-  background: #9c9aa6;
+  background: #3f3f3f;
   transform: rotate(0);
   transition: all 0.5s;
 }
